更新反射文档

--- a/src/com/javastudy/reflection/反射总结.md
+++ b/src/com/javastudy/reflection/反射总结.md
@@ -64,7 +64,7 @@ Oracle 官方对反射的解释是：
 
   因为反射包括了一些动态类型，所以 JVM 无法对这些代码进行优化。因此，反射操作的效率要比那些直接调用慢的多。所以尽量避免在经常被执行的代码或者对性能要求很高的程序中使用反射。
 
-  （反射大概比直接调用慢50~100倍，但是需要在执行100万遍的是偶才会有所感觉）
+  （反射大概比直接调用慢 50 ~ 100 倍，但是需要在执行 100 万遍的是偶才会有所感觉）
 
 - **安全限制**
 
@@ -74,7 +74,7 @@ Oracle 官方对反射的解释是：
 
   反射允许代码执行一些在正常情况下不被允许的操作（访问私有的属性或方法），所以使用反射可能会导致意料之外的副作用 —— 代码有功能上的错误，降低可移植性。反射破坏了代码的抽象性，因此当平台发生改变的时候，代码的行为就可能也随着变化。
 
-**Java反射可以访问和修改私有成员变量，那封装成private还有意义么？**
+** Java 反射可以访问和修改私有成员变量，那封装成 private 还有意义么？**
 
 既然小偷可以访问和搬走私有成员家具，那封装成防盗门还有意义么？这是一样的道理，并且 Java 从应用层给我们提供了安全管理机制——安全管理器，每个 Java 应用都可以拥有自己的安全管理器，它会在运行阶段检查需要保护的资源的访问权限及其它规定的操作权限，保护系统免受恶意操作攻击，以达到系统的安全策略。
 
@@ -82,6 +82,58 @@ Oracle 官方对反射的解释是：
 
 ## 具体使用
 
+### java.lang.reflect.Class
+
+Class 存放着对应类型的运行时信息。在 Java 程序运行时，Java 虚拟机为所有类型维护一个 java.lang.Class 对象。该 Class 对象存放着所有关于该对象的运行时信息。
+
+那我们如何获取想要的 Class，look this Code
+
+```java
+    public static void main(String[] args) {
+        // 方式1：Object.getClass()
+        // Object 类的 getClass() 方法返回一个 Class 类实例
+        String name = "不是秃头的小李程序员";
+        Class<?> classType = name.getClass();
+        System.out.println("Object.getClass() classType: " + classType);
+
+        // 方式2：T.Class
+        // T 是任意 Java 类型
+        Class<?> classType2 = String.class;
+        System.out.println("T.Class classType: " + classType2);
+
+        // 方式3：Class.forName
+        try {
+            Class<?> classType3 = Class.forName("java.lang.String");
+            System.out.println("Class.forName classType: " + classType2);
+            // 根据 className 没有找到类，会抛出 ClassNotFoundException 异常
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        }
+    }
+```
+
+获取 Class 的三种方法
+
+- getClass()
+- T.class
+- Class.forName
+
+这三种用法需要根据具体的场景灵活去使用，比如 JDBC 获取连接的数据库类型，就通过 Class.forName(“类路径”)。
+
+获取到想要的 Class 了，就可以获取到它的一切信息。在获取想要的信息钱，不妨先了解个知识点。
+
+> 方法带与不带「Declared」的区别
+>
+> 1. 不带「Declared」的方法支持取出包括继承、公有（public）& 不包括（Private）的构造函数
+> 2. 带「Declared」的方法支持取出包括当前类所有的构造函数（公有和私有）& 不包括继承
+
+### Field
+
+
+
+### Method
+
+### Constructor
 
 ## 原理
 
